--- a/project.properties
+++ b/project.properties
@@ -12,23 +12,5 @@
 
 # Project target.
 target=android-10
-android.library.reference.1=..\\AndEngineMODPlayerExtension
-android.library.reference.2=..\\AndEngine
-android.library.reference.3=..\\AndEngineMultiplayerExtension
-android.library.reference.4=..\\AndEngineAugmentedRealityExtension
-android.library.reference.6=..\\AndEngineLiveWallpaperExtension
-android.library.reference.5=..\\AndEnginePhysicsBox2DExtension
-android.library.reference.8=..\\AndEngineSVGTextureRegionExtension
-android.library.reference.7=..\\AndEngineScriptingExtension
-android.library.reference.10=..\\AndEngineTMXTiledMapExtension
-android.library.reference.9=..\\AndEngineTexturePackerExtension
-android.library.reference.14=../Java/AndEngineSVGTextureRegionExtension
-android.library.reference.15=../Java/AndEngineTexturePackerExtension
-android.library.reference.16=../Java/AndEnginePhysicsBox2DExtension
-android.library.reference.17=../Java/AndEngineTMXTiledMapExtension
-android.library.reference.18=../Java/AndEngineMODPlayerExtension
-android.library.reference.19=../Java/AndEngineMultiplayerExtension
-android.library.reference.20=../Java/AndEngine
-android.library.reference.11=../Java/AndEngineAugmentedRealityExtension
-android.library.reference.12=../Java/AndEngineLiveWallpaperExtension
-android.library.reference.13=../Java/AndEngineScriptingExtension
+android.library.reference.1=../../Java/AndEngine
+android.library.reference.2=../../Java/AndEnginePhysicsBox2DExtension
