--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-10
 android.library.reference.1=../AndEngine
 android.library.reference.2=../AndEnginePhysicsBox2DExtension
+android.library.reference.3=../AndEngineTMXTiledMapExtension
