--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.joysticandmovingsamples"
+    package="com.example.movingsamples"
     android:versionCode="1"
     android:versionName="1.0" >
 
