association of client parts

--- a/project.properties
+++ b/project.properties
@@ -12,8 +12,6 @@
 
 # Project target.
 target=android-10
-android.library.reference.3=../AndEngineTMXTiledMapExtension
-android.library.reference.1=../AndEngine
-android.library.reference.2=../AndEnginePhysicsBox2DExtension
-android.library.reference.4=../../AndEngine
-android.library.reference.5=../../AndEnginePhysicsBox2DExtension
+android.library.reference.3=..\\AndEngineTMXTiledMapExtension
+android.library.reference.1=..\\AndEngine
+android.library.reference.2=..\\AndEnginePhysicsBox2DExtension
