--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.projii.client"
+    package="com.example.movingsamples"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -7,19 +7,44 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+    <application android:label="@string/app_name" >
         <activity
-            android:name="org.projii.client.GameActivity"
-            android:label="@string/title_activity_main" >
+            android:name="org.projii.client.menu.LoginActivity"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="org.projii.client.GameActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:configChanges="orientation" 
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="org.projii.client.ShipActivity"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity
+            android:name="org.projii.client.menu.ShipStructureActivity"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity
+            android:name="org.projii.client.menu.JoinGameActivity"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity
+            android:name="org.projii.client.menu.ShipActivity"
+            android:label="@string/title_activity_ship"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity
+            android:name="org.projii.client.menu.ShipDescriptionActivity"
+            android:label="@string/title_activity_ship_description" 
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
     </application>
 
 </manifest>
