--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,18 +5,30 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="17" />
 
     <application android:label="@string/app_name" android:allowBackup="true"  android:icon="@drawable/ic_launcher">
         <activity
-            android:name="org.projii.client.menu.LoginActivity"
-            android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:name="org.projii.client.menu.MainMenuActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.projii.client.menu.LoginActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape" >
+            
+        </activity>
+         <activity
+            android:name="org.projii.client.menu.SelectTypeOfGameActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape" >
+            
         </activity>
         <activity
             android:name="org.projii.client.GameActivity"
